<resources>
    <string name="app_name">orderUp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register Restaurant</string>
    <string name="action_register_user">Register User</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_coupon">Create Coupon</string>
    <string name="end_date">End Date</string>
    <string name="value_decimal">Value (Decimal)</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="code">Code</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="enter_coupon_title">Enter coupon title</string>
    <string name="coupon_title">Coupon Title</string>
    <string name="value_of_coupon">Value of coupon</string>
    <string name="start_date">Start Date (Format: dd/MM/yyyy)</string>
    <string name="valid_until_date">Valid Until Date (Format: dd/MM/yyyy)</string>
    <string name="subscribe">Subscribe</string>
    <string name="menu">Menu</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="profile_page">Profile Page</string>
    <string name="textview">TextView</string>
    <string name="coupons">Coupons</string>
    <string name="coupon_added">Coupon Added</string>
    <string name="add_item">add_ite,</string>
    <string name="enter_item_name">enterName</string>
    <string name="item_name">itemName</string>
    <string name="item_desc">itemDesc</string>
    <string name="item_price">itemPrice</string>
    <string name="edit_menu">editMenu</string>
    <string name="pay">pay</string>
    <string name="basketHeading">basket</string>
    <string name="payment">PAYMENT</string>
    <string name="textView">TextView</string>
    <string name="splitPay">Split Pay</string>
    <string name="soloPay">Solo Pay</string>
    <string name="enterCardDetails">Please enter 16 Digit Card Number</string>
    <string name="enter_cardDetails">Please enter 3-Digit CVV Number</string>
    <string name="completepay">Complete Payment</string>
    <string name="viewmenu">View Menu</string>
    <string name="selectRest">Select Restaurant</string>
    <string name="home_page">Home Page</string>
    <string name="solo_pay">Solo Pay</string>
    <string name="split_pay">Split Pay</string>
    <string name="please_enter_16_digit_card_number">Please enter 16 Digit Card Number</string>
    <string name="please_enter_3_digit_cvv_number">Please enter 3-Digit CVV Number</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="additem">Add Item</string>
    <string name="titlePayment">Payment</string>
    <string name="baketTitle">Basket</string>
    <string name="EditMenu">Edit Menu</string>
    <string name="review_added">Add Review</string>
    <string name="logout">Log out</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="orderp">OrderUp!</string>
    <string name="viewAccount">VIEW ACCOUNT</string>
    <string name="basketa">Basket</string>
    <string name="paymenta">Payment</string>
    <string name="register_login_page">Register</string>

    <string-array name="testMenu1">
        <item>6 Chicken Wings</item>
        <item>12 Nuggets</item>
        <item>Big Bobs BBQ Burger</item>
        <item>Pizza</item>
        <item>CocaCola</item>
        <item>Burger</item>
        <item>Milkshake</item>
    </string-array>
</resources>
