<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewPP"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#009688"
        android:fontFamily="sans-serif"
        android:text="@string/profile_page"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:text="Username" />

    <LinearLayout
        style="buttonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/subsBtn"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subscriptions"
            android:onClick="goToSubscriberActivity"/>

        <Button
            android:id="@+id/logoutBtn"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:onClick="logoutBtnClicked"/>

    </LinearLayout>

</LinearLayout>