<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/soloButton"
        android:layout_width="136dp"
        android:layout_height="147dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="55dp"
        android:onClick="soloClick"
        android:text="@string/solo_pay"
        app:layout_constraintBottom_toTopOf="@+id/cardField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/splitButton"
        android:layout_width="154dp"
        android:layout_height="141dp"
        android:onClick="splitClick"
        android:text="@string/split_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/soloButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="420dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/please_enter_16_digit_card_number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitButton"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/cvvField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/please_enter_3_digit_cvv_number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardField"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/completePaymentButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:onClick="completeClicked"
        android:text="@string/complete_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvField"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>